# books_scraping_api

./: .dockerignore  .gitignore  Dockerfile  README.md  __init__.py  pyproject.toml  requirements.txt
data/: books.csv
scripts/: scraper.py
src/: __init__.py
src/app/: __init__.py  main.py
src/app/middleware/: __init__.py  auth_middleware.py  request_logging.py
src/app/routes/: __init__.py  auth_routes.py  book_routes.py  health_routes.py  ml_routes.py
src/app/schemas/: __init__.py  auth_schema.py  book_schema.py  health_schema.py  ml_schema.py  scraper_schema.py  simple_health_schema.py
src/application/: __init__.py  get_all_books.py  get_all_categories.py  get_book_by_id.py  get_book_recommendations.py  get_ml_features.py  get_training_data.py  health_check.py  index_books.py  login_user.py  register_user.py  run_prediction.py  scraper.py  search_books.py  simple_health_check.py
src/domain/: __init__.py  book.py  exceptions.py  user.py
src/infrastructure/: __init__.py  database.py
src/infrastructure/repositories/: __init__.py  book_csv_repository.py  pinecone_repository.py  user_repository.py
src/infrastructure/security/: jwt_service.py
src/infrastructure/services/: datadog_config.py  datadog_handler.py  embedding_service.py  system_metrics.py
