[tool.poetry]
name = "books-scraping-api"
version = "0.1.0"
description = ""
authors = ["higorms <menezes.higor.98@gmail.com>", "nfilho1989 <narcelioclemente@outlook.com>"]
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = "^3.13"
requests = "^2.32.5"
beautifulsoup4 = "^4.13.5"
pandas = "^2.3.2"
fastapi = "^0.117.1"
uvicorn = "^0.36.0"
pydantic = "^2.11.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
